--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -23,7 +23,6 @@
  
  .app-container {
      height: 100%;
-     background: #f5f5f5;
  }
  
  .wrapperbox>.el-row {
@@ -42,28 +41,30 @@
      border-radius: 3px;
      margin-bottom: 10px;
  }
-
- .equipInfobox{
-    text-align: left;
-    padding: 0 20px;
-    font-size: 14px;
-    h6{
-        font-size: 14px;margin: 0 0 10px;;
-    }
-     .el-col{    margin-bottom: 10px;
-        label{ 
-            background: #f5f5f5;
-            display: inline-block;
-            margin-right: 10px;
-            min-width: 100px;
-            padding: 5px 5px;
-            border-radius: 3px;
-            text-align: center;
-            font-weight: normal;
-        }
-        span{
-            display: inline-block;
-        }
+ 
+ .equipInfobox {
+     text-align: left;
+     padding: 0 20px;
+     font-size: 14px;
+     h6 {
+         font-size: 14px;
+         margin: 0 0 10px;
+         ;
      }
-}
-
+     .el-col {
+         margin-bottom: 10px;
+         label {
+             background: #f5f5f5;
+             display: inline-block;
+             margin-right: 10px;
+             min-width: 100px;
+             padding: 5px 5px;
+             border-radius: 3px;
+             text-align: center;
+             font-weight: normal;
+         }
+         span {
+             display: inline-block;
+         }
+     }
+ }
