--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -4,17 +4,21 @@
  
  .el-pagination {
      padding: 10px 15px!important;
-     text-align: right;
  }
  
  .el-table th {
      color: #565656!important;
      padding: 2px 0!important;
-     background-color: #f8f8f9!important
+     background-color: #f7f8fe!important
  }
- 
+ .el-table--border th, .el-table--border td{
+    border-right: 1px solid #ebeef5!important;
+ }
+ .el-table--group, .el-table--border {
+    border: 1px solid #ebeef5!important;;
+}
  .el-table .caret-wrapper {
-     width: 14px!important;
+     width: 14px!important;margin-left: 5px;
  }
  
  .el-table .sort-caret {
@@ -26,18 +30,28 @@
  }
  
  .treebox {
-     //  background: #fff;
-     //  height: 100%;
-     padding: 0 10px;
-     box-sizing: border-box;
+     .el-tree{
+        padding: 10px;
+        box-sizing: border-box;
+     }
  }
  
  .bg-white {
      background: #fff;
      border-radius: 3px;
      margin-bottom: 10px;
+    
  }
- 
+ .comheight{
+    margin-bottom: 0;
+    height: 100%
+}
+.infobox {
+    line-height: 1.5;
+    padding: 15px 20px;
+    height: 100%;
+    overflow: auto;
+}
  .equipInfobox {
      text-align: left;
      padding: 0 20px;
@@ -64,3 +78,71 @@
          }
      }
  }
+ .search-box {
+     background: #fff;
+     padding: 20px 20px 10px;
+     margin-bottom: 20px;
+     box-shadow: 0px 2px 4px #f5f5f5;
+     border-radius: 4px;
+     .el-form {
+         .el-form-item {
+             margin-bottom: 10px;
+         }
+     }
+ }
+ 
+ .el-form {
+     padding-right: 5%;
+ }
+ 
+ .el-form-item__label {
+     font-weight: normal;
+ }
+ .search-box{
+     .el-dropdown{margin-right: 10px;}
+ }
+ .el-scrollbar__wrap {
+     overflow: auto;
+ }
+ .el-tree {
+    color: #666666!important;
+    
+}
+.treebox{
+    .el-scrollbar{
+        background: #fff;
+    }
+}
+.tips{text-align: center;padding-top: 20%;font-size: 14px;color: #999;}
+.el-loading-spinner{
+     i,.el-loading-text{
+        color: #999!important;
+    }
+}
+.app-container{
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: stretch;
+    height: 100%;
+    box-sizing: border-box;
+    .containerbox{
+        flex: 1;
+        display: block;
+        height: 72%;
+        padding: 0 20px;
+        &.el-row{
+            padding: 0;;
+        }
+    }
+}
+.table-btns{padding: 20px 0;}
+@media screen and (max-width:768px){
+    .comheight {
+        height: auto!important;
+        margin-bottom: 10px;
+      }
+      .treebox .el-tree{
+          padding-bottom: 30px;
+      }
+}
