--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -236,6 +236,7 @@
      position: absolute;
      bottom: 0;
      padding: 20px;
+     z-index: 11;
      background: #fff;
      left: 0;
      right: 0;
