--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -154,7 +154,7 @@
  }
  
  .el-scrollbar {
-     height: 100%;
+     height: 100%;padding: 5px 0;
  }
  
  .treebox {
@@ -251,6 +251,37 @@
      right: 30px!important;
  }
  
+
+//  开关
+.el-switch__label * {
+    line-height: 24px;
+    font-size: 12px;
+    display: inline-block;
+}
+.switchStyle .el-switch__label {
+    position: absolute;
+    display: none;
+    color: #a6b3d2;
+    height: 24px;text-align:center;
+    &.is-active {
+        color: #fff;
+}
+}
+  .switchStyle .el-switch__label--left {
+    z-index: 9;
+    left: 8px;
+  }
+  .switchStyle .el-switch__label--right {
+    z-index: 9;
+    left: -16px;
+  }
+  .switchStyle .el-switch__label.is-active {
+    display: block;
+  }
+  .switchStyle.el-switch .el-switch__core,
+  .el-switch .el-switch__label {
+    width: 54px !important;
+  }
  @media screen and (max-width:768px) {
      .comheight {
          height: auto!important;
