--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -77,9 +77,27 @@
  
  .infobox {
      line-height: 1.5;
-     padding: 15px 20px;
+     padding: 15px 30px;
      height: 100%;
      overflow: auto;
+     .el-input--medium .el-input__inner {
+         height: 54px;
+         line-height: 54px;
+     }
+ }
+ 
+ .el-input-number--medium {
+     width: 150px;
+ }
+ 
+ .el-input--medium .el-input__inner {
+     height: 40px;
+     line-height: 40px;
+ }
+ 
+ .el-input-number.is-controls-right[class*=medium] [class*=increase],
+ .el-input-number.is-controls-right[class*=medium] [class*=decrease] {
+     line-height: 19px;
  }
  
  .equipInfobox {
@@ -154,7 +172,8 @@
  }
  
  .el-scrollbar {
-     height: 100%;padding: 5px 0;
+     height: 100%;
+     padding: 5px 0;
  }
  
  .treebox {
@@ -228,6 +247,11 @@
      }
  }
  
+ .marginBottom30 {
+     margin-bottom: 30px;
+     margin-left: 0;
+ }
+ 
  .form-footer {
      text-align: center;
  }
@@ -251,37 +275,81 @@
      right: 30px!important;
  }
  
-
-//  开关
-.el-switch__label * {
-    line-height: 24px;
-    font-size: 12px;
-    display: inline-block;
-}
-.switchStyle .el-switch__label {
-    position: absolute;
-    display: none;
-    color: #a6b3d2;
-    height: 24px;text-align:center;
-    &.is-active {
-        color: #fff;
-}
-}
-  .switchStyle .el-switch__label--left {
-    z-index: 9;
-    left: 8px;
-  }
-  .switchStyle .el-switch__label--right {
-    z-index: 9;
-    left: -16px;
-  }
-  .switchStyle .el-switch__label.is-active {
-    display: block;
-  }
-  .switchStyle.el-switch .el-switch__core,
-  .el-switch .el-switch__label {
-    width: 54px !important;
-  }
+ //  开关
+ .el-switch__label * {
+     line-height: 24px;
+     font-size: 12px;
+     display: inline-block;
+ }
+ 
+ .switchStyle .el-switch__label {
+     position: absolute;
+     display: none;
+     color: #a6b3d2;
+     height: 24px;
+     text-align: center;
+     &.is-active {
+         color: #fff;
+     }
+ }
+ 
+ .switchStyle .el-switch__label--left {
+     z-index: 9;
+     left: 8px;
+ }
+ 
+ .switchStyle .el-switch__label--right {
+     z-index: 9;
+     left: -16px;
+ }
+ 
+ .switchStyle .el-switch__label.is-active {
+     display: block;
+ }
+ 
+ .switchStyle.el-switch .el-switch__core,
+ .el-switch .el-switch__label {
+     width: 54px !important;
+ }
+ 
+ .el-dropdown-menu {
+     width: 116px;
+ }
+ 
+ //  按钮样式
+ .el-button--primary.is-plain {
+     color: #558cf7;
+     background: #ffffff;
+     border-color: #558cf7;
+ }
+ 
+ .el-button--info.is-plain {
+     color: #333333;
+     background: #ffffff;
+     border-color: #ebeef5;
+ }
+ 
+ .el-button--primary.is-plain:hover,
+ .el-button--primary.is-plain:focus {
+     background: #f1f6ff;
+     border-color: #558cf7;
+     color: #418bff;
+ }
+ 
+ .el-button--info.is-plain:hover,
+ .el-button--info.is-plain:focus {
+     background: #f6f6f6;
+     border-color: #eaeef6;
+     color: #333333;
+ }
+ 
+ .el-input.is-disabled .el-input__inner {
+     background-color: #f7f7f7;
+     border-color: #ebeef5;
+     color: #C0C4CC;
+     cursor: not-allowed;
+ }
+ 
  @media screen and (max-width:768px) {
      .comheight {
          height: auto!important;
