--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,7 +14,7 @@ $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 $menuBg:#31394d;
 $menuHover:#222836;
 $subMenuBg:#222836;
-$subMenuHover:#181c29;
+$subMenuHover:#222836;
 $sideBarWidth: 220px;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
