--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -87,7 +87,7 @@
  }
  
  .el-input-number--medium {
-     width: 150px;
+     width: 100%;
  }
  
  .el-input--medium .el-input__inner {
@@ -144,6 +144,7 @@
      height: 100%;
      position: relative;
      padding-bottom: 90px;
+     margin-bottom: 0;;
      .el-form .el-form-item {
          margin-bottom: 22px;
      }
@@ -162,7 +163,9 @@
          margin-right: 10px;
      }
  }
- 
+ .el-select-dropdown__list{
+    padding: 6px 0 20px!important;
+ }
  .el-scrollbar__wrap {
      overflow: auto;
  }
@@ -173,7 +176,6 @@
  
  .el-scrollbar {
      height: 100%;
-     padding: 5px 0;
  }
  
  .treebox {
@@ -246,7 +248,9 @@
          height: 18px;
      }
  }
- 
+ .el-form--label-left{
+     padding-left:10px;
+ }
  .marginBottom30 {
      margin-bottom: 30px;
      margin-left: 0;
@@ -291,7 +295,7 @@
  }
  
  .switchStyle .el-switch__label--left {
-     z-index: 9;
+     z-index: 9;color: #a5b2d1!important;
      left: 8px;
  }
  
@@ -305,10 +309,17 @@
  }
  
  .switchStyle.el-switch .el-switch__core,
- .el-switch .el-switch__label {
+ .el-switch .el-switch__label,.el-switch__core {
      width: 54px !important;
+     height: 24px!important;;border-radius: 21px!important;
  }
- 
+ .el-switch__core:after{
+     top: 3px;;
+ }
+ .el-switch{
+    line-height: 22px;
+    height: 24px;
+ }
  .el-dropdown-menu {
      width: 116px;
  }
@@ -330,14 +341,27 @@
      background: #ffffff;
      border-color: #ebeef5;
  }
- 
+ .el-button--primary:hover, .el-button--primary:focus {
+    background: #7aaeff;
+    border-color: #7aaeff;
+    color: #fff;
+}
  .el-button--primary.is-plain:hover,
  .el-button--primary.is-plain:focus {
      background: #f1f6ff;
      border-color: #558cf7;
      color: #418bff;
  }
- 
+ .el-button--primary.is-plain.is-disabled, .el-button--primary.is-plain.is-disabled:hover, .el-button--primary.is-plain.is-disabled:focus, .el-button--primary.is-plain.is-disabled:active {
+    color: #74bcff;
+    background-color: #ffffff;
+    border-color: #d1e9ff;
+}
+.el-button--info.is-plain.is-disabled, .el-button--info.is-plain.is-disabled:hover, .el-button--info.is-plain.is-disabled:focus, .el-button--info.is-plain.is-disabled:active {
+    color: #bcbec2;
+    background-color: #ffffff;
+    border-color: #e9e9eb;
+}
  .el-button--info.is-plain:hover,
  .el-button--info.is-plain:focus {
      background: #f6f6f6;
@@ -351,7 +375,20 @@
      color: #C0C4CC;
      cursor: not-allowed;
  }
- 
+ .el-pagination.is-background .btn-prev, .el-pagination.is-background .btn-next, .el-pagination.is-background .el-pager li {
+    margin: 0 5px;
+    background-color: #ffffff;
+    color: #606266;
+    min-width: 32px;
+    border-radius: 0px;
+    border: 1px solid #ebeef5;
+    padding: 0 6px!important;
+}
+.el-pagination.is-background .el-pager li:not(.disabled).active {
+    background-color: #558cf7;
+    color: #fff;
+    border: 1px solid #558cf7;
+}
  @media screen and (max-width:768px) {
      .comheight {
          height: auto!important;
@@ -361,3 +398,63 @@
          padding-bottom: 30px;
      }
  }
+
+
+
+
+
+
+
+
+//  权限表格 样式
+.roletable-box{
+    border-top:1px solid #ebeef5;border-right:1px solid #ebeef5;background-color: #fff;margin-right: 10px;
+    height:95%;border-bottom:1px solid #ebeef5;
+    margin-left: 10px;background-color: #f7f8fe;
+    ul{
+        display: flex;align-items:center;list-style:none;padding:0;margin:0;border-bottom:1px solid #ebeef5;border-left:1px solid #ebeef5;padding-left:30px;
+       li{
+           list-style:none;padding:0;margin:0;min-height:54px;line-height:54px;color: #333;
+            .smbox{ padding:0px 20px;
+                display: inline-block; 
+                span{
+                    height: 28px;
+                    border-radius: 3px;cursor: pointer;;
+                    line-height: 28px;
+                    padding: 0 14px;position: relative;
+                    border: solid 1px #1c60ff;font-size: 14px;color: #666;display: inline-block;;
+                    &.on{
+                        background-color: #f6f9ff;
+                        border: solid 1px #558cf7;color: #558cf7;
+                        .svgicon{display: block;position: absolute;top: -2px;right: -3px;font-size: 20px;;}
+                       
+                    }
+                }
+            }
+            &:nth-child(1){
+                width: 18%;
+            }
+            &:nth-child(2){
+                width: 84%;background-color: #fff;flex: 1;
+                &>div:last-child{
+                        ul{
+
+                        border-bottom:none
+                    }
+                }
+            }
+            &.first-box{
+                text-align: center;border-left:1px solid #ebeef5;width:190px ;
+            }
+            &.last-box{
+                border-left:1px solid #ebeef5;
+               
+               
+            }
+            .el-checkbox{
+                white-space: normal;
+            }
+            
+       }
+    }
+}
