--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -9,18 +9,20 @@
  .el-pagination {
      padding: 10px 15px!important;
  }
+ 
  .el-pagination__jump {
-    margin-left: 0px!important;
+     margin-left: 0px!important;
  }
+ 
  .el-table th {
      color: #565656!important;
      //  padding: 18px 0!important;
-     height: 60px;
+     height: 50px;
      background-color: #f7f8fe!important;
  }
  
  .el-table td {
-     height: 54px;
+     height: 40px;
  }
  
  .el-table--border th,
@@ -91,7 +93,7 @@
  
  .el-input-number--medium {
      width: 100%;
-     .el-input__inner{
+     .el-input__inner {
          text-align: left;
      }
  }
@@ -105,54 +107,34 @@
  .el-input-number.is-controls-right[class*=medium] [class*=decrease] {
      line-height: 19px;
  }
- .smInfoform-wrap{
-    height: 100%;padding: 0;
-    max-width: 950px;
-    .smInfoform-box{
-        background: #fff;
-        padding: 30px;
-        margin-bottom: 20px;
-        box-shadow: 0px 1px 5px #f2f7ff;
-        &:last-child{
-            margin-bottom: 0;
-        }
-        .el-form{
-            .el-input.is-disabled .el-input__inner{color: #333!important;}
-        }
-    }
-    .border-right{border-right:1px dashed #ededee ;}
-}
-//  .equipInfobox {
-//      text-align: left;
-//      padding: 0 20px;
-//      font-size: 14px;
-//      h6 {
-//          font-size: 14px;
-//          margin: 0 0 10px;
-//          ;
-//      }
-//      .el-col {
-//          margin-bottom: 10px;
-//          label {
-//              background: #f5f5f5;
-//              display: inline-block;
-//              margin-right: 10px;
-//              min-width: 100px;
-//              padding: 5px 5px;
-//              border-radius: 3px;
-//              text-align: center;
-//              font-weight: normal;
-//          }
-//          span {
-//              display: inline-block;
-//          }
-//      }
-//  }
+ 
+ .smInfoform-wrap {
+     height: 100%;
+     padding: 0;
+     max-width: 950px;
+     .smInfoform-box {
+         background: #fff;
+         padding: 30px;
+         margin-bottom: 20px;
+         box-shadow: 0px 1px 5px #f2f7ff;
+         &:last-child {
+             margin-bottom: 0;
+         }
+         .el-form {
+             .el-input.is-disabled .el-input__inner {
+                 color: #333!important;
+             }
+         }
+     }
+     .border-right {
+         border-right: 1px dashed #ededee;
+     }
+ }
  
  .search-box {
      background: #fff;
      padding: 20px 20px 10px;
-     margin-bottom: 20px;
+     margin-bottom: 15px;
      box-shadow: 0px 2px 4px #f5f5f5;
      border-radius: 4px;
      .el-form {
@@ -170,11 +152,13 @@
      .el-form .el-form-item {
          margin-bottom: 22px;
      }
-    .el-select{width: 100%;}
-    .el-date-editor.el-input, .el-date-editor.el-input__inner{
+     .el-select {
          width: 100%;
      }
-
+     .el-date-editor.el-input,
+     .el-date-editor.el-input__inner {
+         width: 100%;
+     }
  }
  
  .el-form {
@@ -250,7 +234,7 @@
      padding: 20px 0;
  }
  
- .smtitle{
+ .smtitle {
      font-size: 14px;
      color: #333333;
      font-weight: bold;
@@ -267,12 +251,13 @@
  
  .form-smtitle {
      font-size: 18px;
-     margin-bottom: 40px;text-align: left!important;
+     margin-bottom: 40px;
+     text-align: left!important;
      margin-top: 10px;
      margin-left: 10px;
-     &::before {   
+     &::before {
          content: "";
-        width: 4px;
+         width: 4px;
          background-color: #4473f2;
          margin-right: 10px;
          height: 18px;
@@ -447,7 +432,6 @@
      color: #fff;
      border: 1px solid #558cf7;
  }
-
  
  //  权限表格 样式
  .roletable-box {
@@ -537,5 +521,3 @@
          }
      }
  }
-
-
