--- a/src/styles/tree.scss
+++ b/src/styles/tree.scss
@@ -83,6 +83,9 @@
         .el-tree-node__content:hover {
             background: none;
         }
+        .el-tree-node__content {
+            height: 32px;
+        }
         &:last-child {
             position: relative;
             &:before {
