--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -12,4 +12,9 @@
      .el-pagination {
          white-space: initial;
      }
+    .dragleft,.dragright{
+        width: 100%!important;
+    }
+    .dragresize{width: 0!important;}
+
  }
