--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -36,8 +36,9 @@
  
  .el-table--group,
  .el-table--border {
-     border: 1px solid #ebeef5!important;
+    //  border: 1px solid #ebeef5!important;
      border-bottom: none!important;
+     border-right:none;
  }
  
  .el-table .caret-wrapper {
@@ -71,11 +72,13 @@
          box-sizing: border-box;
      }
  }
- 
+ .el-table__fixed, .el-table__fixed-right{
+    padding-bottom: 2px;    box-sizing: content-box;
+ }
  .bg-white {
      background: #fff;
      border-radius: 3px;
-     margin-bottom: 10px;
+    //  margin-bottom: 10px;
  }
  
  .comheight {
@@ -89,10 +92,16 @@
      max-width: 550px;
      height: 100%;
      overflow: auto;
+     .el-form-item{
+        margin-bottom: 15px;
+     }
      .el-input--medium .el-input__inner {
-         height: 54px;
-         line-height: 54px;
+         height: 45px;
+         line-height: 45px;
          color: #333333!important;
+     }
+     .el-form-item--medium .el-form-item__label{
+        line-height: 36px;
      }
  }
  
@@ -105,7 +114,7 @@
  
  .el-input--medium .el-input__inner {
      height:32px;
-     line-height:32px;
+     line-height:32px;border-radius: 2px;;
  }
  
  .el-input-number.is-controls-right[class*=medium] [class*=increase],
@@ -126,8 +135,12 @@
              margin-bottom: 0;
          }
          .el-form {
+            .el-form-item{
+                margin-bottom: 15px;;
+            }
              .el-input.is-disabled .el-input__inner {
-                 color: #333!important;
+                 color: #333!important;height: 45px;
+                 line-height: 45px;
              }
          }
      }
@@ -247,7 +260,7 @@
  }
  
  .table-btns {
-     padding:10px 0;
+     padding:15px 0;
  }
  
  .smtitle {
@@ -287,7 +300,7 @@
  }
  
  .marginBottom30 {
-     margin-bottom: 30px;
+     margin-bottom: 20px;
      margin-left: 0;
  }
  
@@ -379,6 +392,7 @@
  }
  .el-button--medium {
      padding: 8px 15px;
+     border-radius: 2px;
      font-size: 14px;
 }
  .el-button--primary.is-plain {
@@ -442,7 +456,7 @@
  .el-pagination.is-background .btn-prev,
  .el-pagination.is-background .btn-next,
  .el-pagination.is-background .el-pager li {
-     margin: 0 5px;
+     margin: 0 ;
      background-color: #ffffff;
      color: #606266;
      min-width: 32px;
@@ -458,8 +472,24 @@
  }
 
  .el-pagination span:not([class*=suffix]), .el-pagination button, .el-pager li,.el-input--mini .el-input__inner,.el-pagination__editor.el-input .el-input__inner,.el-pagination__editor{
-     height: 26px;line-height: 24px;font-size: 12px;
+     height: 26px;line-height: 26px;font-size: 12px;
  }
+ .el-pagination .el-select .el-input{
+    width: 90px;    margin: 0 10px;
+    .el-input__inner {
+        padding-right: 16px;
+        border-radius: 5px;
+        background-color: #f8f8f8;padding-left:0px;
+        border: none;
+    }
+ }
+ .el-pagination__editor.el-input .el-input__inner{
+    border: none;
+    border-bottom: 1px solid #ebeef5;
+    border-radius: 0;
+    width: 38px;
+ }
+
  
  //  权限表格 样式
  .roletable-box {
