--- a/src/styles/tree.scss
+++ b/src/styles/tree.scss
@@ -168,6 +168,9 @@
       margin-left: -10px;padding-right: 20px;;
       height: 100%;
       background: #f0f2f6;
+      &:hover{
+          background: #dfe6f3!important;
+      }
     }
     .dragright {
       float: left;
