--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -34,6 +34,7 @@
      border-right: 1px solid #ebeef5!important;
  }
  
+ .total-font{font-weight: bold;}
  .el-table--group,
  .el-table--border {
     //  border: 1px solid #ebeef5!important;
@@ -262,6 +263,7 @@
  .table-btns {
      padding:15px 0;
  }
+
  
  .smtitle {
      font-size: 14px;
@@ -609,3 +611,5 @@
  .el-tabs__nav-wrap::after {
      background-color: #f6f7fa;
  }
+
+ .datainfo{padding:15px 20px 15px 30px;}
