--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -15,6 +15,6 @@
     .dragleft,.dragright{
         width: 100%!important;
     }
-    .dragresize{width: 0!important;}
+    // .dragresize{width: 0!important;}
 
  }
