--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -617,7 +617,6 @@
 
 //  概况
 .smdatabox{
-        height: 154px;
         margin-bottom: 15px;color: #fff;
         box-shadow: 0px 0px 10px 0px  #b4ceff;
         border-radius: 4px;
@@ -636,13 +635,19 @@
         
     h6 {
         margin: 0;
-        padding: 15px 10px 10px;
-        font-size: 14px;
+        padding: 15px 20px 15px;
+        font-size: 16px;
         font-weight: normal;
         > i {
-            margin-right: 5px;
-            font-size: 18px;
-            vertical-align: text-top !important;
+            margin-right: 8px;
+            vertical-align: -0.15em;
+            width: 26px;
+            height: 26px;
+            background: #fff;
+            border-radius: 100%;
+            line-height: 26px;
+            display: inline-block;
+            font-size: 26px;
         }
     }
     .el-col p {
@@ -652,12 +657,18 @@
         margin: 0;
         padding-bottom: 10px;
         span {
-          font-size: 14px;
           b {
-            font-size: 18px;
+            font-size: 30px;
             margin-right: 5px;
             font-weight: normal;
           }
         }
       }
+}
+
+.el-radio-button__orig-radio:checked+.el-radio-button__inner {
+    color: #fff;
+    background-color: #588cf7;
+    border-color: #588cf7;
+    box-shadow: -1px 0 0 0 #588cf7;
 }
