--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -12,9 +12,9 @@
      .el-pagination {
          white-space: initial;
      }
-    .dragleft,.dragright{
-        width: 100%!important;
-    }
-    // .dragresize{width: 0!important;}
-
+     .dragleft,
+     .dragright {
+         width: 100%!important;
+     }
+     // .dragresize{width: 0!important;}
  }
