--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -105,7 +105,7 @@
  }
  
  .el-input-number--medium {
-     width: 100%;
+     width: 100%;    line-height: 32px;
      .el-input__inner {
          text-align: left;
      }
@@ -118,7 +118,7 @@
  
  .el-input-number.is-controls-right[class*=medium] [class*=increase],
  .el-input-number.is-controls-right[class*=medium] [class*=decrease] {
-     line-height: 19px;
+     line-height: 15px;
  }
  
  .smInfoform-wrap {
@@ -669,4 +669,25 @@
     background-color: #588cf7;
     border-color: #588cf7;
     box-shadow: -1px 0 0 0 #588cf7;
+}
+.el-dialog__header{
+    background-color: #f7f8fe;
+    border: solid 1px #ebeef5;
+    padding: 0 20px;text-align: left;
+    height: 39px;
+    line-height: 39px;
+    .el-dialog__title{
+        font-size: 14px;
+    }
+    .el-dialog__headerbtn {
+        top: 11px;
+    }
+}
+.el-dialog__body{
+    padding-bottom: 0!important;
+}
+.el-dialog__footer{
+    padding-top: 0!important;
+    padding-bottom: 28px!important;
+
 }
