--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -732,3 +732,13 @@
      padding-top: 0!important;
      padding-bottom: 28px!important;
  }
+ 
+ .nodata-box {
+     text-align: center;
+     padding: 40px 0;
+     p {
+         color: #939199;
+         padding: 10px;
+         text-align: center;
+     }
+ }
