--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -99,6 +99,9 @@
      overflow: auto;
      .el-form-item {
          margin-bottom: 20px;
+         &:last-child {
+             margin-bottom: 0;
+         }
      }
      .el-input--medium .el-input__inner {
          height: 45px;
