--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -737,11 +737,17 @@
  }
  
  .nodata-box {
-     text-align: center;
+     text-align: center;    line-height: 1;
      padding: 40px 0;
+     img{
+         width: 300px;margin: 0;
+         &.smimg{
+             width: 200px;
+         }
+     }
      p {
          color: #939199;
-         padding: 10px;
+         padding:0 10px;margin: 0;
          text-align: center;
      }
  }
