--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -18,15 +18,17 @@
      color: #565656!important;
      //  padding: 18px 0!important;
      font-size: 14px;
-     height: 50px;
+     height: 50px;    font-weight: normal;
      background-color: #f7f8fe!important;
  }
  
  .el-table td {
-     font-size: 12px;
+     font-size: 14px;
      height: 40px;
  }
- 
+ .el-button--mini{
+    font-size: 14px;
+ }
  .el-table--medium th,
  .el-table--medium td {
      padding: 0px;
