--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -655,7 +655,7 @@
  }
  
  .datainfo {
-     padding: 15px 20px 15px 30px;
+     padding: 15px 20px;
  }
  
  //  概况
@@ -751,4 +751,8 @@
          padding:0 10px;margin: 0;
          text-align: center;
      }
+ }
+
+ .el-radio-button:first-child .el-radio-button__inner{
+    border-radius: 2px 0 0 2px;
  }
