--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -927,3 +927,25 @@
       }
     }
   }
+
+  
+.el-dialog__wrapper {
+    .el-drawer__header {
+      background-color: #f7f8fe;
+      border: solid 1px #ebeef5;
+      padding: 0 30px;
+      height: 39px;
+      line-height: 39px;
+      margin-bottom: 10px;
+    }
+    .el-drawer__body {
+      padding: 0 10px 0 20px;
+    }
+    .el-tree-node__content > .el-checkbox:last-of-type {
+      margin-right: 8px;
+    }
+    .dialog-footer {
+      text-align: center;border-top: 1px solid #eeeeee;
+      padding-top: 20px;
+    }
+  }
