--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -18,7 +18,8 @@
      color: #565656!important;
      //  padding: 18px 0!important;
      font-size: 14px;
-     height: 50px;    font-weight: normal;
+     height: 50px;
+     font-weight: normal;
      background-color: #f7f8fe!important;
  }
  
@@ -28,9 +29,11 @@
      position: relative;
      z-index: 1;
  }
- .el-button--mini{
-    font-size: 14px;
+ 
+ .el-button--mini {
+     font-size: 14px;
  }
+ 
  .el-table--medium th,
  .el-table--medium td {
      padding: 0px;
@@ -127,9 +130,10 @@
  }
  
  .el-input--medium .el-input__inner {
-    height: 34px;
-    line-height: 34px;
-}
+     height: 34px;
+     line-height: 34px;
+ }
+ 
  .el-input-number.is-controls-right[class*=medium] [class*=increase],
  .el-input-number.is-controls-right[class*=medium] [class*=decrease] {
      line-height: 17px;
@@ -740,214 +744,225 @@
  }
  
  .nodata-box {
-     text-align: center;    line-height: 1;
+     text-align: center;
+     line-height: 1;
      padding: 40px 0;
-     img{
-         width: 300px;margin: 0;
-         &.smimg{
+     img {
+         width: 300px;
+         margin: 0;
+         &.smimg {
              width: 200px;
          }
      }
      p {
          color: #939199;
-         padding:0 10px;margin: 0;
+         padding: 0 10px;
+         margin: 0;
          text-align: center;
      }
  }
-
- .el-radio-button:first-child .el-radio-button__inner{
-    border-radius: 2px 0 0 2px;
- }
-
  
- .lightimg{
-    position:absolute;
-    left:10px;right:10px;
-    top:12%;
-    text-align:center;
-    img{
-      width:13%;
-        -webkit-animation: move 1s infinite  linear;
-        animation: move 1s infinite  linear;
-      &:nth-child(1){
-        -webkit-animation-delay:0.2s;
-        animation-delay:0.2s;
-      }
-      &:nth-child(2){
-        -webkit-animation-delay:0.8s;
-        animation-delay:0.8s;
-      }
-      &:nth-child(3){
-        -webkit-animation-delay:0.5s;
-        animation-delay:0.5s;
-      }
-      &:nth-child(4){
-        -webkit-animation-delay:0.9s;
-        animation-delay:0.9s;
-      }
-      &:nth-child(5){
-        -webkit-animation-delay:0.3s;
-        animation-delay:0.3s;
-      }
-    }
-    
-  }
-@-webkit-keyframes move{
-    0% {
-      transform:translateY(-20%);
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      transform:translateY(100%);
-      opacity: 0;
-    }
-  }
-@keyframes move {
-    0% {
-      transform:translateY(-20%);
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      transform:translateY(100%);
-      opacity: 0;
-      
-    }
-}
-
-
-
-.circlebox {
-    display: flex;
-    justify-content: space-between;
-    padding: 3% 10% 2%;
-    div {
-      border: 1px solid #3e4674;
-      border-radius: 100%;
-      width: 100px;
-      height: 100px;
-      position: relative;
-      span {
-        position: absolute;
-        line-height: 100px;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        text-align: center;
-        font-size: 20px;
-        left: 0;
-        right: 0;
-        color: #fff;
-        display: block;
-      }
-      canvas {
-        width: 100px;
-        height: 100px;
-        display: inline-block;
-      }
-    }
-  }
-  .circlebox-lx {
-    width: 140px;
-    height: 140px;
-    position: relative;
-    top: 0%;
-    left: 22%;
-    font-size: 0;
-    > div {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      &.circle1 {
-        width: 100%;
-        height: 100%;
-      }
-      &.circle2 {
-        width: 90px;
-        height: 90px;
-      }
-      &.circle3 {
-        width: 50px;
-        height: 50px;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-  .ledgebox {
-    position: absolute;
-    right: 20%;
-    top: 20%;
-    display: inline-block;
-    margin-left: 5%;
-    font-size: 24px;
-    p{
-        margin: 0 0 10px;
-    }
-    span {
-      color: #fff;margin-left: 10px;;
-        display: inline-block;
-        vertical-align: middle;
-        label {
-        font-size: 12px;
-        display: block;
-        font-weight: normal;
-      }
-    }
-    i {
-      width: 35px;
-      height: 35px;
-      line-height: 35px;
-      border-radius: 100%;
-      border: solid 1px #3e4674;
-      display: inline-block;
-      text-align: center;;
-      b {
-        width: 18px;
-        height: 18px;    border-radius: 100%;
-        display: inline-block;
-
-        &.dot1 {
-          background-color: #2178ff;
-        }
-        &.dot2 {
-          background-color: #07fdff;
-        }
-        &.dot3 {
-          background-color: #d2feff;
-        }
-      }
-    }
-  }
-
-  
-.el-dialog__wrapper {
-    .el-drawer__header {
-      background-color: #f7f8fe;
-      border: solid 1px #ebeef5;
-      padding: 0 30px;
-      height: 39px;
-      line-height: 39px;
-      margin-bottom: 10px;
-    }
-    .el-drawer__body {
-      padding: 0 10px 0 20px;
-    }
-    .el-tree-node__content > .el-checkbox:last-of-type {
-      margin-right: 8px;
-    }
-    .dialog-footer {
-      text-align: center;border-top: 1px solid #eeeeee;
-      padding-top: 20px;
-    }
-  }
+ .el-radio-button:first-child .el-radio-button__inner {
+     border-radius: 2px 0 0 2px;
+ }
+ 
+ .lightimg {
+     position: absolute;
+     left: 10px;
+     right: 10px;
+     top: 12%;
+     text-align: center;
+     img {
+         width: 13%;
+         -webkit-animation: move 1s infinite linear;
+         animation: move 1s infinite linear;
+         &:nth-child(1) {
+             -webkit-animation-delay: 0.2s;
+             animation-delay: 0.2s;
+         }
+         &:nth-child(2) {
+             -webkit-animation-delay: 0.8s;
+             animation-delay: 0.8s;
+         }
+         &:nth-child(3) {
+             -webkit-animation-delay: 0.5s;
+             animation-delay: 0.5s;
+         }
+         &:nth-child(4) {
+             -webkit-animation-delay: 0.9s;
+             animation-delay: 0.9s;
+         }
+         &:nth-child(5) {
+             -webkit-animation-delay: 0.3s;
+             animation-delay: 0.3s;
+         }
+     }
+ }
+ 
+ @-webkit-keyframes move {
+     0% {
+         transform: translateY(-20%);
+         opacity: 0;
+     }
+     50% {
+         opacity: 1;
+     }
+     100% {
+         transform: translateY(100%);
+         opacity: 0;
+     }
+ }
+ 
+ @keyframes move {
+     0% {
+         transform: translateY(-20%);
+         opacity: 0;
+     }
+     50% {
+         opacity: 1;
+     }
+     100% {
+         transform: translateY(100%);
+         opacity: 0;
+     }
+ }
+ 
+ .circlebox {
+     display: flex;
+     justify-content: space-between;
+     padding: 3% 10% 2%;
+     div {
+         border: 1px solid #3e4674;
+         border-radius: 100%;
+         width: 100px;
+         height: 100px;
+         position: relative;
+         span {
+             position: absolute;
+             line-height: 100px;
+             top: 0;
+             bottom: 0;
+             margin: auto;
+             text-align: center;
+             font-size: 20px;
+             left: 0;
+             right: 0;
+             color: #fff;
+             display: block;
+         }
+         canvas {
+             width: 100px;
+             height: 100px;
+             display: inline-block;
+         }
+     }
+ }
+ 
+ .circlebox-lx {
+     width: 140px;
+     height: 140px;
+     position: relative;
+     top: 0%;
+     left: 22%;
+     font-size: 0;
+     >div {
+         position: absolute;
+         left: 0;
+         right: 0;
+         top: 0;
+         bottom: 0;
+         margin: auto;
+         &.circle1 {
+             width: 100%;
+             height: 100%;
+         }
+         &.circle2 {
+             width: 90px;
+             height: 90px;
+         }
+         &.circle3 {
+             width: 50px;
+             height: 50px;
+         }
+         canvas {
+             width: 100%;
+             height: 100%;
+         }
+     }
+ }
+ 
+ .ledgebox {
+     position: absolute;
+     right: 20%;
+     top: 20%;
+     display: inline-block;
+     margin-left: 5%;
+     font-size: 24px;
+     p {
+         margin: 0 0 10px;
+     }
+     span {
+         color: #fff;
+         margin-left: 10px;
+         ;
+         display: inline-block;
+         vertical-align: middle;
+         label {
+             font-size: 12px;
+             display: block;
+             font-weight: normal;
+         }
+     }
+     i {
+         width: 35px;
+         height: 35px;
+         line-height: 35px;
+         border-radius: 100%;
+         border: solid 1px #3e4674;
+         display: inline-block;
+         text-align: center;
+         ;
+         b {
+             width: 18px;
+             height: 18px;
+             border-radius: 100%;
+             display: inline-block;
+             &.dot1 {
+                 background-color: #2178ff;
+             }
+             &.dot2 {
+                 background-color: #07fdff;
+             }
+             &.dot3 {
+                 background-color: #d2feff;
+             }
+         }
+     }
+ }
+ 
+ .el-dialog__wrapper {
+     .el-drawer__header {
+         background-color: #f7f8fe;
+         border: solid 1px #ebeef5;
+         padding: 0 30px;
+         height: 39px;
+         line-height: 39px;
+         margin-bottom: 10px;
+     }
+     .el-drawer__body {
+         padding: 0 10px 0 20px;
+     }
+     .el-tree-node__content>.el-checkbox:last-of-type {
+         margin-right: 8px;
+     }
+     .dialog-footer {
+         text-align: center;
+         border-top: 1px solid #eeeeee;
+         padding-top: 20px;
+     }
+ }
+ 
+ .el-table th.gutter {
+     display: table-cell!important;
+     width: 17px!important;
+ }
