--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -131,7 +131,7 @@
  
  .el-input--medium .el-input__inner {
      height: 34px;
-     line-height: 34px;
+     line-height: 34px;width: 200px;
  }
  
  .el-input-number.is-controls-right[class*=medium] [class*=increase],
@@ -217,6 +217,7 @@
  
  .el-form-item__label {
      font-weight: normal;
+     min-width: 68px;
  }
  
  .el-form .el-form-item__error--inline {
