--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -82,7 +82,7 @@
  
  .treebox {
      .el-tree {
-         padding: 20px;
+         padding: 15px 10px;
          box-sizing: border-box;
      }
  }
@@ -998,4 +998,10 @@
      flex-direction: column;
      align-content: stretch;
      align-items: stretch;
+ }
+ .tb-smtitle{padding:15px 0;margin:0}
+ 
+.smchartbox{
+    border: solid 1px #ebeef5;border-radius: 2px;
+    margin-bottom:15px;
  }
