--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -82,7 +82,7 @@
  
  .treebox {
      .el-tree {
-         padding: 15px 10px;
+         padding:15px 10px 15px 0;
          box-sizing: border-box;
      }
  }
