--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -56,4 +56,8 @@
             padding: 20px 0px 20px!important;;
         }
     }
+    .el-table{
+        height: auto!important;
+        min-height: 500px;
+    }
 }
